feat(dashboard): Dashboard api returning different analytics
